# flask-nginx

./: Dockerfile  Makefile  README.md  app.py  docker-compose.yml  nginx.conf  pyproject.toml
migrations/: env.py
src/app/: useCases.py
src/infra/: Repository.py  db.py
src/infra/models/: Person.py
