[tool.poetry]
name = "rinha-backend"
version = "0.1.0"
description = ""
authors = ["Levy Araujo <lev0x79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^2.3.3"}
sqlalchemy = "^2.0.20"
gunicorn = "^21.2.0"
asyncpg = "^0.28.0"
aiopg = "^1.4.0"
alembic = "^1.12.0"
psycopg2 = "^2.9.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = {extras = ["d"], version = "^23.9.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
